# bevy_game_template

./: Cargo.toml  README.md
src/: main.rs
src/plugins/: mod.rs
src/plugins/example_plugin/: mod.rs
src/plugins/example_plugin/systems/: hello.rs
